--- a/index.html
+++ b/index.html
@@ -49,6 +49,26 @@
                 </li>
             </ul>
         </div>
+        <div class="main_text_2">
+            <ul class="contents2">
+                <li class="CaseStudy3">
+                    <div class="Phonebox">
+                    </div>
+                    <div class="Phonebox_text">
+                        <h2>email Template Redesign</h2>
+                        <h4>Enhanced customer experience by redesigning the welcome letters</h4>
+                    </div>
+                </li>
+                <li class="CaseStudy4">
+                    <div class="Travel">
+                    </div>
+                    <div class="Travel_text">
+                        <h2>Developing a travel app</h2>
+                        <h4>Developed a mobile app for travellers</h4>
+                    </div>
+                </li>
+            </ul>
+        </div>
         <div class="logo_story">
             <h1>My Logo</h1>
             <h4>This was made by me on Adobe Photoshop. All the lines and dots are from my name, 아라.</h4>
